--- a/.env_template
+++ b/.env_template
@@ -3,3 +3,4 @@ IS_DEBUG=True
 TF_VAR_aws_access_key_id=xxxx
 TF_VAR_aws_secret_access_key=xxxxxxxx
 TF_VAR_aws_region=us-east-1
+TF_VAR_aws_account_id=xxxx
